challenges/1-gitops/istio-canary/00-assert.yaml
# The DestinationRule resolves to the stable Service and defines both subsets
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: echo
  namespace: cnpe-istio-canary
spec:
  host: echo-stable
